1.0.1-beta
- Improved code tidiness and consolidated components.
- Addressed potential vulnerabilities related to the Electron API.
- Improved overall build parametrisation.
- Added animations to modals and other areas of the UI.
- Made subtle updates to the UI color scheme.
- Added "copy to clipboard" button to the "Receive Funds" modal.
- Refactor the way in which transactions are sent and processed.
- Added "Lock Wallet" button on header.
- Main inputs now accept "Enter" to proceed.
- User now can navigate through modals using "Enter" and "Esc".
- Added context isolation for more security.
- Added updater module.
- Fixed bugs where sometimes inputs froze on Windows devices.

1.0.2-beta
- Fixed grammar on welcome page.
- Adjusted minor UI inconsistencies across the app.