@@ -10,7 +10,7 @@
         script-src  'self';
         style-src   'self' 'unsafe-inline';
         img-src     'self' data:;
-        connect-src 'self' http://localhost:5123 ws://localhost:5123 https://rpc.r5.network https://rpc-testnet.r5.network https://api.github.com/repos/r5-labs/r5-wallet/releases/latest;
+        connect-src 'self' http://localhost:5123 ws://localhost:5123 https://rpc.r5.network https://rpc-testnet.r5.network https://api.github.com/repos/r5-labs/r5-wallet/releases/latest https://api.coinpaprika.com/v1/tickers/r5-r5-network;
         font-src    'self';
       ">
     <title>R5 Desktop Wallet</title>
