@@ -13,9 +13,11 @@ function createMainWindow() {
   const mainWindow = new BrowserWindow({
     width: 1100,
     height: 720,
-    resizable: false, // no drag‑to‑resize
-    maximizable: true, // but still allow Maximize
-    minimizable: true, // can minimise
+    minWidth: 1100,
+    minHeight: 720,
+    resizable: true,
+    maximizable: true,
+    minimizable: true,
     autoHideMenuBar: true,
     icon: path.join(app.getAppPath(), "window-icon.png"),
     webPreferences: {
@@ -24,7 +26,7 @@ function createMainWindow() {
       contextIsolation: true,
       sandbox: false
     }
-  });
+  }); 
 
   mainWindow.webContents.setWindowOpenHandler(({ }) => {
     return {
